# pygrapes

./: Demo_sim_Script_1incangle-pygrapes.ipynb  Demo_sim_Script_1incangle.ipynb  Demo_sim_Script_1incangle_scratch.ipynb  README.md  aux1.py  demo_pz_values.npy  multislice.py  pyproject.toml  requirements.txt  setup.py
pygrapes/: Demo_sim_Script_1incangle-pygrapes.ipynb  README.md  __init__.py  create_3d.py  dataloading.py  demo_px_values.npy  probe_aux.py  propagation.py  scan_position_data.npz
pygrapes/pygrapes_testbuild/: create_3d.py  optimization.py  plotting.py
pygrapes_testbuild/: create_3d.py  setup.py
